# nanopb-generator-c

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
src/: descriptor.c  descriptor.h  generator.c  generator.h  main.c  names.c  names.h  options.c  options.h  pb_reader.c  pb_reader.h  strbuf.c  strbuf.h
tests/: CMakeLists.txt  compare_output.py
tests/protos/: enums.options  enums.proto  nested.options  nested.proto  simple.options  simple.proto
